--- a/README
+++ b/README
@@ -4,4 +4,4 @@ PythonProject/
     ├── run.py
     └── start.py
 
-![image](pic/streamer_page.png)
+![image](https://github.com/YichiehYu/Home-Test---AQA/blob/main/test/pic/streamer_page.png)
