--- a/README
+++ b/README
@@ -4,4 +4,6 @@ PythonProject/
     ├── run.py
     └── start.py
 
+![image](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.png)
+
 ![image](https://github.com/YichiehYu/Home-Test---AQA/blob/main/test/pic/streamer_page.png)
