--- a/README
+++ b/README
@@ -5,5 +5,6 @@ PythonProject/
     └── start.py
 
 ![image](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.png)
+![alt text](https://github.com/YichiehYu/Home-Test---AQA/blob/main/test/pic/streamer_page.png?raw=true)
 
 ![image](https://github.com/YichiehYu/Home-Test---AQA/blob/main/test/pic/streamer_page.png)
