--- a/README
+++ b/README
@@ -4,6 +4,6 @@ PythonProject/
     ├── run.py
     └── start.py
 
-![image](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.png)
-![streamer screenshot](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.png)
+![image](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.gif)
+![streamer screenshot](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.gif)
 
