--- a/README
+++ b/README
@@ -6,4 +6,5 @@ PythonProject/
 
 ![image](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.gif)
 ![streamer screenshot](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.gif)
+![Test Running](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.gif)
 
