--- a/README
+++ b/README
@@ -4,7 +4,9 @@ PythonProject/
     ├── run.py
     └── start.py
 
-![image](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.gif)
+![image](https://github.com/YichiehYu/Home-Test---AQA/blob/main/test/pic/streamer_page.gif)
 ![streamer screenshot](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.gif)
 ![Test Running](https://raw.githubusercontent.com/YichiehYu/Home-Test---AQA/main/test/pic/streamer_page.gif)
+
+![image](picture or gif url)
 
